# W3D_Reader

./: .gitignore  CMakeLists.txt  test.cpp
include/: binaryreader.h  macros.h  utils.h  w3d.h  w3d_chunk.h  w3d_model.h
src/: binaryreader.cpp  utils.cpp  w3d.cpp  w3d_model.cpp
